--- a/public/index.html
+++ b/public/index.html
@@ -91,9 +91,10 @@
 		 <div><br><br><br><br><button v-on:click="goTown()">Return to town</button></div>
 		</div>
 	</div>
+
 	</div><!--main-->
        </div><!--layout-->
-	
+<div id='footer'><a style="color:white;" href="https://github.com/marcman00/creative4.git">marcman00's github</a></div>	
 </div><!--app-->
 
 
