--- a/public/index.html
+++ b/public/index.html
@@ -77,21 +77,6 @@
 		 <br><br><button v-on:click="goTown()">Another time</button></div>
 	</div></div>
 
-	<div v-else-if="location=='death'" align="center">
-		<div class="title"><h2>You have died...</h2></div>
-
-		<button v-on:click="retire()">End</button>
-		<br><br><h2>Hall of Fame</h2><hr style="border-color:black; height:1px;">
-		  <div style="display:grid; grid-template-columns:1fr 200px 125px 1fr;"><div></div>
-			<div><h3>Name</h3></div><div><h3>Battles Won</h3><div></div></div></div>
-			<hr style="border-color:black; height:1px;">
-		  <div style="display:grid; grid-template-columns:1fr 200px 125px 1fr;" v-for="entry in scores">
-		    <div></div><div><h4>{{entry.name}}</h4></div><div><h4>{{entry.score}}</h4></div><div></div></div>
-
-	</div>		
-	</div><!--centered-->
-	</div><!--death-->
-
 	<div v-else-if="location=='smithy'">
 		<div class="title"><h2>Ye Olde Smithy</h2></div>
 		<div class="smithyBig">
@@ -103,6 +88,22 @@
 		 <div><br><br><br><br><button v-on:click="goTown()">Return to town</button></div>
 		</div>
 	</div>
+
+	<div v-else-if="location=='death'">
+		<div class="title"><h2>You have died...</h2></div>
+
+		<div align="center"><button v-on:click="retire()">End</button>
+		<br><br><h2>Hall of Fame</h2><hr style="border-color:black; height:1px;"></div>
+		  <div style="scores"><div></div>
+			<div><h3>Name</h3></div><div><h3>Battles Won</h3><div></div></div></div>
+			<hr style="border-color:black; height:1px;">
+		  <div style="scores" v-for="entry in scores">
+		    <div></div><div><h4>{{entry.name}}</h4></div><div><h4>{{entry.score}}</h4></div><div></div></div>		
+	</div>	
+	</div><!--centered-->
+	</div><!--death-->
+
+	
 
 	</div><!--main-->
        </div><!--layout-->
